--- a/river.html
+++ b/river.html
@@ -140,7 +140,7 @@
                         un club de gran dimensión social.
                     </p> <br>
                     <P>PARA SABER MAS SOBRE EL NACIMIENTO DE RIVER DESCARGUE EL PDF:</P> <br>
-                    <p><a download="fundacionRiver" href="./fdocuments.es_river-plate-100.pdf"
+                    <p><a download="fundacionRiver" href="./descarga/fdocuments.es_river-plate-100.pdf"
                             class="descarga">descargar
                             archivo</a></p>
                     <p>
