--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <script>
         var nombre = prompt(`cual es tu nombre?`);
-        var edad = prompt(`cual es tu edad?`);
-        if (edad < 18) { alert(nombre + ` eres menor de edad, estas ingresando bajo tu responsabilidad`); }
+        var numero = prompt(`cual es tu edad?`);
+        if (numero < 18) { alert(nombre + ` eres menor de edad, estas ingresando bajo tu responsabilidad`); }
     </script>
     <header>
         <h1>Club Atletico River Plate</h1>
