--- a/paginas secundarias/socio.html
+++ b/paginas secundarias/socio.html
@@ -29,7 +29,7 @@
             femenino<input type="radio" name="indique sexo"><br>
             otro<input type="radio" name="indique sexo"><br>
             ingrese la edad:<label><input type="number" name="edad" id="edad"></label> <br>
-            <a class="btn btn-primary" href="../river.html" role="button">aceptar</a>
+            <a class="btn btn-primary" href="../index.html" role="button">aceptar</a>
             <input class="btn btn-primary" type="reset" value="Reset">
         </form>
     </div>
