--- a/paginas secundarias/actividades.html
+++ b/paginas secundarias/actividades.html
@@ -20,7 +20,7 @@
     </header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../river.html" onclick=" return pagina()"> <img class="escudo"
+            <a class="navbar-brand" href="../index.html" onclick=" return pagina()"> <img class="escudo"
                     src="../imagenes/escudo de river.png" alt="escudo de river"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
